--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div class="container header-style">
 			<div class="logo">
 				<a href="#">
-					<img src="img/logo.png" alt="" title="Logo">
+					<img src="img/logo.png" alt="logo" title="Logo">
 				</a>
 			</div>
 			<nav class="main-navigation">
@@ -54,17 +54,36 @@
 	</header>
 	<div class="slider">
 		<div class="container">
-			<div class="control">
-				<button class="slide-control"></button>
-				<button class="slide-control active"></button>
-				<button class="slide-control"></button>
-			</div>
-			<div class="slider-caption">				
-				<h1>FULL WINTER KIT</h1>
-				<p>Half Jacket + Skiny Trousers + Boot leather</p>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry </p>
-				<p>Price : $120</p>
-				<a href="#"><i class="fa fa-shopping-cart"></i>Order Now</a>
+			<ul class="control">
+				<li class="slide-control" data-slide="0"></li>
+				<li class="slide-control" data-slide="1"></li>
+				<li class="slide-control" data-slide="2"></li>
+			</ul>			
+			
+			<div class="slider-caption">
+				<ul class="slides">
+					<li class="slide" data-item="0">
+						<h1>FULL WINTER KIT</h1>
+						<p>Half Jacket + Skiny Trousers + Boot leather</p>
+						<p class="item-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry </p>
+						<p>Price : $120</p>
+						<a href="#"><i class="fa fa-shopping-cart"></i>Order Now</a>
+					</li>
+					<li class="slide" data-item="1">
+						<h1>FULL WINTER KIT</h1>
+						<p>Half Jacket + Skiny Trousers + Boot leather</p>
+						<p class="item-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry </p>
+						<p>Price : $110</p>
+						<a href="#"><i class="fa fa-shopping-cart"></i>Order Now</a>
+					</li>
+					<li class="slide" data-item="2">
+						<h1>FULL WINTER KIT</h1>
+						<p>Half Jacket + Skiny Trousers + Boot leather</p>
+						<p class="item-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry </p>
+						<p>Price : $100</p>
+						<a href="#"><i class="fa fa-shopping-cart"></i>Order Now</a>
+					</li>
+				</ul>				
 			</div>	
 		</div>
 	</div>
@@ -78,7 +97,7 @@
 						<img src="img/jacket1.png" alt="product1">
 						<div class="info">
 							<h3>Reebok Track Jacket</h3>
-							<p class="size">sizes    :    s - m - l - xl</p>
+							<p class="size">sizes: s - m - l - xl</p>
 							<ul class="color-row">
 								<li class="color red"></li>
 								<li class="color dark-blue"></li>
